--- a/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/02-core-css-id-and-class/style.css
+++ b/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/02-core-css-id-and-class/style.css
@@ -16,3 +16,28 @@
   background-color: rgb(233, 56, 25);
   position: relative;
 }
+.box-1 {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  background-color: blue;
+}
+.box-2 {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  background-color: gold;
+}
+.box-3 {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  background-color: white;
+
+}
+.box-4 {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  background-color: black;
+}
