--- a/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/03-core-css-positioning/style.css
+++ b/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/03-core-css-positioning/style.css
@@ -38,7 +38,8 @@
 
 .box-3 {
   position: absolute;
-  bottom: 0;
+  top: 100%;
+  transform: translateY(-100%);
   left: 0;
   height: 100px;
   width: 100px;
@@ -48,7 +49,8 @@
 
 .box-4 {
   position: absolute;
-  bottom: 0;
+  top: 100%;
+  transform: translateY(-100%);
   right: 0;
   height: 100px;
   width: 100px;
