--- a/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/04-rock-css-anchors-and-id/style.css
+++ b/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/04-rock-css-anchors-and-id/style.css
@@ -17,6 +17,13 @@
   position: relative;
 }
 
+.secondary {
+  height: 100vh;
+  width: 100%;
+  background-color: orange;
+  position: relative;
+}
+
 .box-1 {
   position: absolute;
   left:0;
@@ -53,4 +60,12 @@
   width: 100px;
   background-color: olivedrab;
   transform: translateY(-100%);
+}
+
+.scroll {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50,-50);
+
 }
