Added styling for h1 and .about-box-center in 1200px media query.  Changed h1 font color to blue.  Set .about-box-center background-color to red, color to white, and border to solid at a larger size of 5px and with purple bordering color.

--- a/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/08-core-css-media-queries-1/style.css
+++ b/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/08-core-css-media-queries-1/style.css
@@ -88,8 +88,13 @@ Therefore, we want our media queries in descending order, so that the most recen
   html {
     font-size: 55%;
   }
-  body {
-    color: blue
+  h1 {
+    color: blue;
+  }
+  .about__box--center {
+    background-color: red;
+    color: white;
+    border: solid 5px purple;
   }
 
   
