Added h1 styling color purple, .btn back-ground color to red, and .about_box_center width to expand at 90%.

--- a/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/08-core-css-media-queries-1/style.css
+++ b/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/08-core-css-media-queries-1/style.css
@@ -106,7 +106,18 @@ Therefore, we want our media queries in descending order, so that the most recen
   html {
     font-size: 45%;
 }
-
+  h1 {
+    color: purple;
+  }
+  .btn {
+    background-color: red;
+  }
+  .about__box--center {
+    background-color: yellow;
+    color: black;
+    border: solid 10px green;
+    width: 90%;
+  }
 }
 
 @media (max-width: 600px) {
