Used transform: translate styling on .btn classes to move button on top of container.  Changed heading-sub class display to block to properly display.

--- a/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/08-core-css-media-queries-1/style.css
+++ b/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/08-core-css-media-queries-1/style.css
@@ -110,13 +110,30 @@ Therefore, we want our media queries in descending order, so that the most recen
     color: purple;
   }
   .btn {
+    position: absolute;
     background-color: red;
+    transform: translateX(-50%);
+    left: 50%;
+    top: 8rem;
+    padding: 5px; ;
+  }
+  .btn:hover {
+    transform: translateX(-50%) translateY(-1px);
+    background-color: green;
+  }
+
+  .btn:active,
+  .btn:focus {
+    transform: translateX(-50%) translateY(1px);
   }
   .about__box--center {
     background-color: yellow;
     color: black;
     border: solid 10px green;
     width: 90%;
+  }
+  .heading-sub {
+    display: block;
   }
 }
 
