--- a/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/09-core-css-media-queries-2/style.css
+++ b/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/09-core-css-media-queries-2/style.css
@@ -22,10 +22,45 @@
 
 @media (max-width: 1250px) {
   .box-red {
+    top: 10px;
 
   }
 
   .box-blue {
+    bottom: 10px;
+    
+  }
+}
+@media (max-width: 1200px) {
+  .box-red {
+    top: 20px;
+
+  }
+
+  .box-blue {
+    bottom: 20px;
+    
+  }
+}
+@media (max-width: 1150px) {
+  .box-red {
+    top: 30px;
+
+  }
+
+  .box-blue {
+    bottom: 30px;
+    
+  }
+}
+@media (max-width: 1100px) {
+  .box-red {
+    top: 40px;
+
+  }
+
+  .box-blue {
+    bottom: 40px;
     
   }
 }
