--- a/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/09-core-css-media-queries-2/style.css
+++ b/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/09-core-css-media-queries-2/style.css
@@ -64,3 +64,124 @@
     
   }
 }
+@media (max-width: 1050px) {
+  .box-red {
+    top: 50px;
+
+  }
+
+  .box-blue {
+    bottom: 50px;
+    
+  }
+}
+@media (max-width: 1000px) {
+  .box-red {
+    top: 60px;
+
+  }
+
+  .box-blue {
+    bottom: 60px;
+    
+  }
+}
+@media (max-width: 950px) {
+  .box-red {
+    top: 70px;
+
+  }
+
+  .box-blue {
+    bottom: 70px;
+    
+  }
+}
+@media (max-width: 900px) {
+  .box-red {
+    top: 80px;
+
+  }
+
+  .box-blue {
+    bottom: 80px;
+    
+  }
+}
+@media (max-width: 850px) {
+  .box-red {
+    top: 90px;
+
+  }
+
+  .box-blue {
+    bottom: 90px;
+    
+  }
+}
+@media (max-width: 800px) {
+  .box-red {
+    top: 100px;
+
+  }
+
+  .box-blue {
+    bottom: 100px;
+    
+  }
+}
+@media (max-width: 750px) {
+  .box-red {
+    top: 110px;
+
+  }
+
+  .box-blue {
+    bottom: 110px;
+    
+  }
+}
+@media (max-width: 700px) {
+  .box-red {
+    top: 120px;
+
+  }
+
+  .box-blue {
+    bottom: 120px;
+    
+  }
+}
+@media (max-width: 650px) {
+  .box-red {
+    top: 130px;
+
+  }
+
+  .box-blue {
+    bottom: 130px;
+    
+  }
+}
+@media (max-width: 600px) {
+  .box-red {
+    top: 135px;
+
+  }
+
+  .box-blue {
+    bottom: 135px;
+    
+  }
+}
+@media (max-width: 550px) {
+  .box-red {
+    top: 140px;
+
+  }
+
+  .box-blue {
+    bottom: 140px;
+    
+  }
+}
